--- a/PBL_6/index.html
+++ b/PBL_6/index.html
@@ -27,6 +27,10 @@
         });
     </script>
     <style>
+       @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+    </style>
+    <script src="https://maps.mapmyindia.com/covid-places/showNearbyCovidPlacesOnMap.js"></script>
+    <style>
         
         
         :root{
